--- a/maarit_nevalainen_CSS2/index.html
+++ b/maarit_nevalainen_CSS2/index.html
@@ -26,11 +26,11 @@
     </section>
         <section class="intro">
         <h2>Jordan</h2>
-            <p class="gen">Discover the breathtaking beauty of Jordan, a land of rich history, stunning landscapes, and unique adventures. From the majestic desert of <strong>Wadi Rum</strong> with its iconic sandstone mountains and red dunes, to the serene shores of the Dead Sea, Jordan offers a journey like no other. Explore traditional Bedouin culture, wander through ancient ruins, and capture unforgettable moments in one of the world's most captivating destinations</p>
+            <p class="gen">Discover the breathtaking beauty of Jordan, a land of rich history, stunning landscapes, and unique adventures. From the majestic desert of <strong>Wadi Rum</strong> with its iconic sandstone mountains and red dunes, to the serene shores of the Dead Sea, Jordan offers a journey like no other.</p>
               
         </section>
     <section class="othergen">other info
-            <p class= gen>more more</p>
+            <p class= gen>Explore traditional Bedouin culture, wander through ancient ruins, and capture unforgettable moments in one of the world's most captivating destinations</p>
         </section>
 </main>
 <footer class="footer">
@@ -40,6 +40,7 @@
 </footer>
 
 </body>
+
 
 
 
