--- a/maarit_nevalainen_CSS2/index.html
+++ b/maarit_nevalainen_CSS2/index.html
@@ -21,8 +21,8 @@
 
 <main>
     <section class="intro">
-        <h2>Introduction</h2>
-        <p class="gen">Introduction about the site</p>
+        <h2>Welcome to Jordan Explorer</h2>
+        <p class="gen">Explore Jordan’s landscapes and culture, with a focus on the Wadi Rum desert. Discover desert vistas, ancient ruins, and Bedouin traditions through photos and stories that inspire your own adventure.</p>
     </section>
         <section class="intro">
         <h2>Jordan</h2>
@@ -47,3 +47,4 @@
 
 
 </html>
+
