--- a/maarit_nevalainen_CSS2/gallery.html
+++ b/maarit_nevalainen_CSS2/gallery.html
@@ -48,9 +48,10 @@
                 <img src="view.jpg" alt="view" class="float-left"></div>
             <p>The Valley of the Moon”, depicted as Mars in several Hollywood feature films Wadi Rum is an Arabian fairy-tale waiting to be discovered</p>
              <div class="image-wrapper right">   
-                <img src="donkeys.jpg" alt="view" class="float-right">
+                <img src="sand.jpg" alt="view" class="float-right">
             </div>
         </section>
     </main>
 </body>
+
 </html>
